k8s/onlyflick-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyflick-service
spec:
  selector:
    app: onlyflick
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
