k8s/onlyflick-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyflick-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: onlyflick.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlyflick-service
                port:
                  number: 80
